2011-05-18  Brett Wilson  <brettw@chromium.org>

Reviewed by Adam Barth.

        Don't create empty file objects if no download file path is specified.
        https://bugs.webkit.org/show_bug.cgi?id=60798

        * src/WebURLResponse.cpp:
        (WebKit::WebURLResponse::setDownloadFilePath):

Canonical link: https://commits.webkit.org/76441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86799 268f45cc-cd09-0410-ab3c-d52691b4dbfc